test is stable